# metamodule-sanguine-monsters

./: .gitmodules  CMakeLists.txt  plugin-mm.json
metamodule-plugins/: SanguineMonsters.mmplugin
